# -IF2150-2025-K02-G11-FoodShare

./: K02_G11_Final_DPPL2.docx.md  LICENSE  README.md  app.py  makefile  provider_dashboard.py  pyproject.toml  receiver_dashboard.py
data/: donasi.csv  requests.csv  users.csv
db/: seed.sql
scripts/: seed.py  sync_csvs.py
src/backend/: csv_manager.py  datamakanan.py  donatur_data.py  feedback.py  feedback_data.py  laporan.py  laporan_data.py  makanan_data.py  mySQLConnector.py  penerima_data.py  request.py  request_data.py  user_data.py
src/backend/api/: client_api.py  server.py  user_route.py
src/constants/: locations.py
src/controller/: account_controller.py  donasi_controller.py  feedback_controller.py  request_controller.py
src/data/: laporan.csv  user.csv
src/frontend/: admin_dashboard.py  forgot_password.py  login_page.py  main_app.py  provider_dashboard.py  receiver_dashboard.py  register_page.py  side_menu.py
src/model/: feedbackdonasi.py  laporandonasi.py  makanan.py  reqdonasi.py  user.py
src/output/: admin_dashboard.py  login_page.py  main_app.py  provider_dashboard.py  receiver_dashboard.py  register_page.py  side_menu.py
src/output/components/: side_menu.py
tests/data/: donasi.csv  feedback.csv  requests.csv  users.csv
